fixed horizontal scroll via grid & YT. tutorial

--- a/src/Styles/components/_classes-cards.scss
+++ b/src/Styles/components/_classes-cards.scss
@@ -13,8 +13,9 @@
 .classes-card-small {
   border-radius: 30px 30px 0 30px;
   cursor: pointer;
-  width: 40vw;
-  height: 21vh;
+  width: 37vw;
+  height: 19vh;
+  overflow: hidden;
 }
 
 .classes-card--corner-box {
@@ -31,5 +32,4 @@
   padding: 0.55rem 1rem 0.55rem 1.3rem;
   gap: 0.2rem;
   border-radius: 0 50px 0 30px;
-  overflow: hidden;
 }
