--- a/src/Styles/routes/_classes.scss
+++ b/src/Styles/routes/_classes.scss
@@ -5,12 +5,12 @@
 }
 
 .classes--small-cards-container {
-  display: flex;
-  flex-direction: row nowrap;
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 42%;
   gap: 1rem;
   overflow-x: auto;
   position: relative;
-  //   issue with the scroll of only container when put wodth on that doesn't affect design of small classes card.. like width: fit-content..
   width: 100%;
   height: 100%;
   &::-webkit-scrollbar {
