--- a/src/css/index.css
+++ b/src/css/index.css
@@ -309,8 +309,9 @@ table {
 .classes-card-small {
   border-radius: 30px 30px 0 30px;
   cursor: pointer;
-  width: 40vw;
-  height: 21vh;
+  width: 37vw;
+  height: 19vh;
+  overflow: hidden;
 }
 
 .classes-card--corner-box {
@@ -328,7 +329,6 @@ table {
   padding: 0.55rem 1rem 0.55rem 1.3rem;
   gap: 0.2rem;
   border-radius: 0 50px 0 30px;
-  overflow: hidden;
 }
 
 .background-imgs {
@@ -401,8 +401,9 @@ table {
 }
 
 .classes--small-cards-container {
-  display: flex;
-  flex-direction: row nowrap;
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 42%;
   gap: 1rem;
   overflow-x: auto;
   position: relative;
